--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.11.0</version>
+                <version>20030203.000550</version>
             </dependency>
 
             <!-- commons-collections -->
@@ -127,7 +127,21 @@
                 <version>2.4.0-b180830.0359</version>
             </dependency>
 
-            <!-- openApi 3 -->
+            <!-- ip解析器 -->
+            <dependency>
+                <groupId>org.lionsoul</groupId>
+                <artifactId>ip2region</artifactId>
+                <version>1.7.2</version>
+            </dependency>
+
+            <!-- UserAgentUtils -->
+            <dependency>
+                <groupId>eu.bitwalker</groupId>
+                <artifactId>UserAgentUtils</artifactId>
+                <version>1.20</version>
+            </dependency>
+
+            <!-- openApi3 -->
             <dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-ui</artifactId>
