--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
                 <version>3.5.2</version>
             </dependency>
 
+            <!-- mybatis-plus-join -->
+            <dependency>
+                <groupId>com.github.yulichang</groupId>
+                <artifactId>mybatis-plus-join</artifactId>
+                <version>1.4.4</version>
+            </dependency>
+
             <!-- mybatis-plus-generator -->
             <dependency>
                 <groupId>com.baomidou</groupId>
